<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">
    <item
        android:id="@+id/action_fast_clock_out"
        android:icon="@drawable/ic_clock_out_white_24dp"
        android:orderInCategory="100"
        android:title="@string/fast_clock_out"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_fast_clock_in"
        android:icon="@drawable/ic_clock_in_white_24dp"
        android:orderInCategory="100"
        android:title="@string/fast_clock_in"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_new_work_shift"
        android:icon="@drawable/ic_add_white_24dp"
        android:orderInCategory="100"
        android:title="@string/new_work_log"
        app:showAsAction="always" />
</menu>